--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
   <head>
+      <script async defer src="/bundle.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
   </head>
   <body>
     <div id="main"></div>
-    <script async defer src="/bundle.js"></script>    
+
   </body>
-</html> 
+</html>
